<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="E_Vise_Command" Id="{f6f4a53f-dffe-4fb8-8804-bd2b59577fb2}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Vise_Command :
(
	Load,
	UnLoad
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>