<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_Vise_State" Id="{a3a1e10f-aa0e-4ce1-bed1-4f4fdb2e35db}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Vise_State :
(
	Empty := 0,
	OutForLoad := 1,
	ReadyToCnc := 2,
	InRobotArmBeforeCnc := 3,
	InCnc := 4,
	CncDone := 5,
	InRobotArmAfterCnc := 6,
	WaitingForUnLoad := 7,
	OutForUnload := 8,
	RequestCleaning := 9,
	OutOfService := 10
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>