<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_ParaVal_UpdateVise" Id="{4d615083-e16e-4560-9f94-a0c07b3168fe}">
    <Declaration><![CDATA[TYPE ST_ParaVal_UpdateVise :
STRUCT
	ViseNumber			: SINT;
	SerialNumber		: STRING(255);
	DutIdentifier		: LINT;
	CamIdentifier		: LINT;
	CncNumber			: SINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>